eip-rocketmq/2022-07-19-k8s/single/broker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqbroker
  namespace: single
spec:
  serviceName: mqbroker
  replicas: 1
  selector:
    matchLabels:
      app: mqbroker
  template:
    metadata:
      labels:
        app: mqbroker
    spec:
      containers:
      - name: mqbroker
        image: foxiswho/rocketmq:4.8.0
        command: ["sh","mqbroker", "-n","rocketmq:9876"]
        imagePullPolicy: Always
        ports:
        - containerPort: 10909
        - containerPort: 10911
        resources:
          requests:
            memory: 128Mi
          limits:
            memory: 1024Mi
